[package]
name = "po-tweet"
version = "0.1.0"
authors = ["mattmac4241 <mattmac4241@yahoo.com>"]

[dependencies]
diesel = "0.9.0"
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
rust-crypto = "^0.2"
rocket = "0.1.5"
rocket_codegen = "0.1.5"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
